Sales image background attachment has been fixed on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -202,10 +202,9 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		background: url("../images/london.jpeg");
+		background: url("https://images.pexels.com/photos/800532/pexels-photo-800532.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 		height: 100%;
 		z-index: -1;
-		background-attachment: fixed;
 	}
 }
 
@@ -250,7 +249,6 @@
 @media (max-width: 302px) {
 	.growsales p {
 		text-align: center;
-		margin: 6% 0 0 9%;
 	}
 }
 
